Fix product API POST handler and UI.
Upload handling:
- Images for the variants were forgotten to be added after transforming from FormData. Fixed.
- Fixed service image optionality.
- Fixed export for fileFriendlyName function.
- Fixed file/folder creation/deletion in route handler (made the creation recursive).

UI:
- Added hover/active/disabled styles to submit button.
- Added spaces to page edges for the scrollbar to prevent content jumping when the scrollbar appears.

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -5,6 +5,11 @@
 /*=========================================
     additional resets and utility classes
   =========================================*/
+html {
+  /* prevents the scrollbar from shifting the content when it appears/disappears */
+  scrollbar-gutter: stable both-edges;
+}
+
 @layer components {
   .container {
     width: 100%;
